# naive_gbe

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  gtest.cmake
doc/: Doxyfile.in
msvc/2019/naive_gbe/: naive_gbe.sln
msvc/2019/naive_gbe/core/: core.vcxproj  core.vcxproj.filters
msvc/2019/naive_gbe/emulator/: emulator.aps  emulator.rc  emulator.vcxproj  emulator.vcxproj.filters  resource.h
msvc/2019/naive_gbe/naive_2dge/: naive_2dge.vcxproj  naive_2dge.vcxproj.filters  packages.config
msvc/2019/naive_gbe/naive_gbe/: naive_gbe.vcxproj  naive_gbe.vcxproj.filters
msvc/2019/naive_gbe/unit_tests/: test.cpp  unit_tests.vcxproj
src/: CMakeLists.txt  main.cpp
src/include/naive_gbe/: benchmark.hpp  cartridge.hpp  cpu.hpp  device.hpp  disassembler.hpp  emulator.hpp  mmu.hpp
src/libs/naive_2dge/: CMakeLists.txt  engine.cpp  font.cpp  fps_counter.cpp  game.cpp  image.cpp  render_task.cpp  state.cpp  texture.cpp
src/libs/naive_2dge/include/naive_2dge/: engine.hpp  font.hpp  fps_counter.hpp  game.hpp  image.hpp  render_task.hpp  state.hpp  texture.hpp  types.hpp
src/libs/naive_2dge/include/naive_2dge/detail/: sdl.hpp
src/libs/naive_gbe/: CMakeLists.txt  address.cpp  cartridge.cpp  cpu.cpp  emulator.cpp  misc.cpp  mmu.cpp  ppu.cpp
src/libs/naive_gbe/include/naive_gbe/: address.hpp  benchmark.hpp  cartridge.hpp  cpu.hpp  disassembler.hpp  emulator.hpp  misc.hpp  mmu.hpp  ppu.hpp  types.hpp
src/modules/: CMakeLists.txt  main.cpp
src/modules/gui/: CMakeLists.txt  config.hpp  emulator_app.cpp  emulator_app.hpp  emulator_data.cpp  emulator_data.hpp  emulator_gui.cpp  emulator_gui.hpp  main.cpp  state_base.cpp  state_base.hpp  state_emulating.cpp  state_emulating.hpp  state_help.cpp  state_help.hpp  state_no_cartridge.cpp  state_no_cartridge.hpp  state_no_rom.cpp  state_no_rom.hpp
test/: CMakeLists.txt  test_cpu.cpp  test_perf.cpp
